workshop3/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demopytonappdr1
  namespace: default
spec:
  host:
  subsets:
  - labels:
      version: v1
    name: version-1
  - labels:
      version: v2
    name: Version-2
  
  #
